# bach

./: Cargo.toml  diesel.toml
migrations/2024-07-12-192841_users_table/: up.sql
migrations/2024-07-19-150125_users_table/: down.sql  up.sql
src/: main.rs  schema.rs  state.rs
src/commons/: app_state.rs  auth.rs  mod.rs  schema.rs
src/user/: mod.rs  models.rs  routes.rs  schemas.rs
src/user/services/: create_user_service.rs  get_my_profile.rs  list_users_service.rs  login_service.rs  mod.rs  register_user_service.rs  root.rs  schemas.rs
